force-app/main/default/objects/marksheet__c/marksheet__c.object-meta.xml
<CustomObject>
    <label>marksheet</label>
    <nameField>
        <label>marksheet Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>marksheets</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>