force-app/main/default/objects/marksheet__c/fields/board_class__c.field-meta.xml
<CustomField>
    <fullName>board_class__c</fullName>
    <label>board class</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Secondary school examination</fullName>
            </value>
            <value>
                <fullName>senior secondary school examination</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>