force-app/main/default/objects/marksheet__c/fields/CHEMISTRY__c.field-meta.xml
<CustomField>
    <fullName>CHEMISTRY__c</fullName>
    <label>CHEMISTRY</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>