force-app/main/default/objects/marksheet__c/fields/ENGLISH__c.field-meta.xml
<CustomField>
    <fullName>ENGLISH__c</fullName>
    <label>ENGLISH</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>