force-app/main/default/objects/marksheet__c/fields/fathers_name__c.field-meta.xml
<CustomField>
    <fullName>fathers_name__c</fullName>
    <label>fathers name</label>
    <length>25</length>
    <type>Text</type>
</CustomField>