force-app/main/default/objects/marksheet__c/fields/GRADE__c.field-meta.xml
<CustomField>
    <fullName>GRADE__c</fullName>
    <formula>if(percentage__c &gt;=90 &amp;&amp;  percentage__c &lt;=100,&quot;A&quot;, if ( percentage__c &gt;=80 &amp;&amp; percentage__c &lt;=89,&quot;B&quot;, if ( percentage__c &gt;=70 &amp;&amp; percentage__c &lt;=79,&quot;C&quot;,&quot;D&quot;)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>GRADE</label>
    <type>Text</type>
</CustomField>