force-app/main/default/objects/marksheet__c/fields/MATHEMATICS__c.field-meta.xml
<CustomField>
    <fullName>MATHEMATICS__c</fullName>
    <label>MATHEMATICS</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>