force-app/main/default/objects/marksheet__c/fields/percentage__c.field-meta.xml
<CustomField>
    <fullName>percentage__c</fullName>
    <formula>( ENGLISH__c + HINDI__c +  CHEMISTRY__c + MATHEMATICS__c + PHYSICS__c )/5</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>percentage</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>