force-app/main/default/objects/marksheet__c/fields/PHYSICS__c.field-meta.xml
<CustomField>
    <fullName>PHYSICS__c</fullName>
    <label>PHYSICS</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>