force-app/main/default/objects/marksheet__c/fields/RESULT__c.field-meta.xml
<CustomField>
    <fullName>RESULT__c</fullName>
    <formula>IF( percentage__c &lt; 33,&quot;FAIL&quot;,&quot;PASS&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>RESULT</label>
    <type>Text</type>
</CustomField>