force-app/main/default/objects/marksheet__c/fields/RollNo__c.field-meta.xml
<CustomField>
    <fullName>RollNo__c</fullName>
    <label>RollNo.</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>